--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint './{lib,src,test}/**/*.{ts,tsx}'",
-    "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx}' && prettier --write './{lib,src,test}/**/*.{ts,tsx}'"
+    "lint": "eslint './{lib,src,test}/**/*.{ts,tsx,vue}'",
+    "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx,vue}' && prettier --write './{lib,src,test}/**/*.{ts,tsx,vue}'"
   },
   "dependencies": {
     "vue": "^3.0.5"
