--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install packages
         run: npm ci
+      - name: fix
+        run: npm run lint-fix
       - name: Lint
         run: npm run lint
